--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "typescript": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
