--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@types/node": "^18.15.13",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "i18n": "^0.15.1",
+    "i18next": "^22.5.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "typescript": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
